# dan_toropov_hw_7

./: .env.example  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
config/: __init__.py  settings.py  urls.py
data/fixtures/: auth_group.json  lws.json  users_payment.json  users_user.json
lws/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializer.py  test.py  tests.py  urls.py  validators.py  views.py
lws/migrations/: 0001_initial.py  0002_alter_course_lessons.py  0003_alter_course_lessons.py  0004_remove_course_lessons_lesson_course.py  0005_alter_lesson_course.py  0006_alter_course_options_course_owner_lesson_owner.py  0007_course_video_url.py  0008_subscribe.py  0009_course_price_lesson_price_alter_course_owner_and_more.py
users/: admin.py  middleware.py  models.py  serializer.py  stripe.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options_alter_user_options_and_more.py  0004_payment_payment_id.py  0005_alter_payment_date_of_payment_and_more.py  0006_payment_payment_link.py  0007_alter_payment_payment_link.py  0008_user_ast_login.py  0009_remove_user_ast_login_alter_user_last_login.py  0010_alter_user_last_login.py  0011_alter_user_last_login.py  0012_alter_user_last_login.py
users/src/: stripe_utils.py
